--- a/home/homepage.html
+++ b/home/homepage.html
@@ -9,7 +9,7 @@
         <link rel="apple-touch-icon" sizes="16x16" href="../images/favicon.png">    
     </head>
     
-    <body>
-        <im
+    <body style="background: gray">
+        
     </body>
 </html>
