Вёрстка верха завершена

--- a/characters/generic.html
+++ b/characters/generic.html
@@ -32,12 +32,12 @@
             </div>
             
             <div class="preview_name">
-                <h1 class="preview_name_h">
+                <p class="preview_name_h">
                     ТАНКОБОТ
-                </h1>
-                <h2 class="preview_name_losung">
+                </p>
+                <p class="preview_name_losung">
                     Простейшее решение проблем
-                </h2>
+                </p>
             </div>
             
             <div class="preview_panel">
