--- a/characters/characters-list.html
+++ b/characters/characters-list.html
@@ -13,8 +13,8 @@
         <title>DeltaTime - Игровые персонажи - Танкобот</title>
         <!--Линки-->
         <link rel ="stylesheet" href="geometry.css">
-        <link rel ="stylesheet" href="../styles/article.css">
         <link rel ="stylesheet" href="../styles/gray.css">
+        <link rel ="stylesheet" href="../styles/article.css">
     </head>
     
     <body>
@@ -64,7 +64,7 @@
                     <div class="info_params-panel__left selection-block dark">
                         <h6><b>Здоровье:</b> 200</h6>
                         <h6><b>Мобильность:</b> 200</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris luctus eu diam in semper. Nullam in ex eget odio hendrerit lobortis. Fusce vulputate, lorem a volutpat viverra, felis nisl vulputate nisl, et convallis eros lorem ut quam. Phasellus pretium <b>lorem dui, sit amet</b> bibendum mauris <a>sodales</a> non. Quisque non ullamcorper elit, nec laoreet mi. Nullam nec erat iaculis arcu euismod mollis. Etiam ultrices dapibus nisl, et auctor ligula condimentum sit amet. <a>Vestibulum vulputate purus sit amet <b>tellus</b></a> euismod fringilla. Mauris nulla justo, consectetur vel vestibulum vitae, malesuada id augue. Donec at dui ac dui ullamcorper commodo. Morbi consequat interdum rutrum. Nullam urna ante, commodo sed dignissim ultrices, luctus et quam. Etiam venenatis lacus tortor, sit amet commodo urna posuere vitae. Integer non quam non risus pellentesque faucibus a elementum massa.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris luctus eu diam in semper. Nullam in ex eget odio hendrerit lobortis. Fusce vulputate, lorem a volutpat viverra, felis nisl vulputate nisl, et convallis eros lorem ut quam. Phasellus pretium <b>lorem dui, sit amet</b> bibendum mauris sodales non. Quisque non ullamcorper elit, nec laoreet mi. Nullam nec erat iaculis arcu euismod mollis. Etiam ultrices dapibus nisl, et auctor ligula condimentum sit amet. Vestibulum vulputate purus sit amet tellus euismod fringilla. Mauris nulla justo, consectetur vel vestibulum vitae, malesuada id augue. Donec at dui ac dui ullamcorper commodo. Morbi consequat interdum rutrum. Nullam urna ante, commodo sed dignissim ultrices, luctus et quam. Etiam venenatis lacus tortor, sit amet commodo urna posuere vitae. Integer non quam non risus pellentesque faucibus a elementum massa.</p>
                     </div>
                     <div class="info_params-panel__right">
                         
