--- a/characters/index.html
+++ b/characters/index.html
@@ -12,7 +12,7 @@
         <!--Описание страницы-->
         <title>DeltaTime - Игровые персонажи - Танкобот</title>
         <!--Линки-->
-        <link rel ="stylesheet" href="geometry.css">
+        <link rel ="stylesheet" href="../characters/geometry.css">
         <link rel ="stylesheet" href="../styles/article.css">
         <link rel ="stylesheet" href="../styles/gray.css">
     </head>
@@ -85,14 +85,14 @@
                 
                 <h1>СПОСОБНОСТИ</h1>
                 <div class="skill-block selection-block dark">
-                    <img class="skill-block_image" src="/Users/mikekopotov/Desktop/Снимок экрана 2020-12-02 в 02.51.12.png">
+                    <img class="skill-block_image" src="../images/favicon.png">
                     <h5>Длиннющее название способности</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris luctus eu diam in semper. Nullam in ex eget odio hendrerit lobortis. Fusce vulputate, lorem a volutpat viverra, felis nisl vulputate nisl, et convallis eros lorem ut quam. Phasellus pretium <b>lorem dui, sit amet</b> bibendum mauris sodales non.</p>
                 </div>
                 <div class="skill-block selection-block dark">
-                    <img class="skill-block_image" src="/Users/mikekopotov/Desktop/Снимок экрана 2020-12-02 в 02.51.12.png">
+                    <img class="skill-block_image" src="../images/favicon.png">
                     <h5>Длиннющее название способности</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris luctus eu diam in semper. Nullam in ex eget odio hendrerit lobortis. Fusce vulputate, lorem a volutpat viverra, felis nisl vulputate nisl, et convallis eros lorem ut quam. Phasellus pretium <b>lorem dui, sit amet</b> bibendum mauris sodales non.</p>
+                    <p>Lorem ipsum dolor sit amet,</p>
                 </div>
                 
                 <h1>СОВЕТЫ</h1>
